package solid_design_principal.InterfaceSegregationPrincipal;public interface Shape3D {
}
