package solid_design_principal.InterfaceSegregationPrincipal;public class Sqaure {
}
